# Havana

./: Havana.sln
Havana/: Configuration.h  Havana.aps  Havana.cpp  Havana.h  Havana.ini  Havana.rc  Havana.vcxproj  Havana.vcxproj.filters  HavanaDlg.cpp  HavanaDlg.h  ImageAnalysis_octflim.m  res_analysis.m  resource.h  stdafx.cpp  stdafx.h
Havana/DataAcquisition/: DataAcquisition.cpp  DataAcquisition.h
Havana/DataAcquisition/SignatecDAQ/: SignatecDAQ.cpp  SignatecDAQ.h  test.cpp
Havana/DataRecording/: DataRecording.cpp  DataRecording.h
Havana/DataRecording/FileWriter/: FileWriter.cpp  FileWriter.h  testFileSave.cpp
Havana/ImageProcess/: Imshow.cpp  Imshow.h  MyBitmap.h  circularize.h  medfilt.h
Havana/ImageProcess/FLIMProcess/: FLIMProcess.cpp  FLIMProcess.h
Havana/ImageProcess/FLIMProcess/FLIMAnalysisDlg/: FLIMAnalysisDlg.cpp  FLIMAnalysisDlg.h
Havana/ImageProcess/FLIMProcess/PulseOverlappedDlg/: PulseOverlapDlg.cpp  (+1 more)
Havana/ImageProcess/OCTProcess/: OCTProcess.cpp  OCTProcess.h
Havana/NI DAQ/: GainControl.cpp  GainControl.h  GalvoScan.cpp  GalvoScan.h  SyncFLIM.cpp  SyncFLIM.h  test.cpp
Havana/NI DAQ/prev/: AnalogOutput.cpp  AnalogOutput.h  AnalogOutput2.cpp  AnalogOutput2.h  CMakeLists.txt
Havana/RS232/CommThread/: CommThread.cpp  CommThread.h  ReadMe.txt
Havana/RS232/ElforlightLaser/: ElforlightLaser.cpp  ElforlightLaser.h
Havana/RS232/FaulhaberMotor/: FaulhaberMotor.cpp  FaulhaberMotor.h
Havana/Tab View/: VisResult.cpp  VisResult.h  VisStream.cpp  VisStream.h
Havana/ZaberStage/: ZaberStage.cpp  ZaberStage.h  z_common.h  zb_serial.c
(+4 files in other folders)
